--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Iqram's Portfolio</title>
     </head>
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="text/css" href="favicon.ico">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
