--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Iqram's Portfolio</title>
     </head>
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="text/css" href="favicon.ico">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
